# CGP9018M-2021-Lab-Codebase

./: CMakeLists.txt  README.md
3dcontent/models/base/: base.mtl
3dcontent/models/cube/: cube.max  cube.mtl  unitcube.max
3dcontent/models/mat_scaled/: mat_scaled.mtl
3dcontent/models/plane/: Normal_Normal_Bump.tga  flatnormal.mtl  plane.FBX  plane.mtl  plane1.FBX  planeX (1).dae  planeX.dae  scene.ASE  scene.DAE  scene.FBX  scene.gltf  scene.mtl  simplescene.max  simplescene01.max  simplescene02.max  simplescene03.max  simplescene04.max  simplescene05.max  simplescene06.max  simplescene07.max  simplescene08.max  simplescene09.max  simplescene10.max  vertexcolour.max  vertexcolour01.max  vertexcolour02.max  vertexcolour03.max  vertexcolourplane.DAE  vertexcolourplane.ase  vertexcolourplane1.DAE
3dcontent/models/sphere/: sphere.mtl
3dcontent/models/triangle/: triangle.mtl
Lab1/: Lab1.cpp  Lab1FragmentShader.fragmentshader  Lab1VertexShader.vertexshader
Lab2/: Lab2.cpp  TextureFragmentShader.fragmentshader  TransformVertexShader.vertexshader
Lab3/: Lab3.cpp  StandardShading.fragmentshader  StandardShading.vertexshader
Lab4/: Lab4.cpp  StandardShading.fragmentshader  StandardShading.vertexshader  StandardShadingWithAOSpecNormalmap.fragmentshader  StandardShadingWithAOSpecNormalmap.vertexshader  StandardShadingWithAOSpecmaps.fragmentshader  skybox.vertexshader
Lab5/: DebugVertexColour.fragmentshader  DebugVertexColour.vertexshader  Lab5.cpp  Lab5a.cpp  StandardShadingWithVertexBlend.fragmentshader
Lab6/: Lab6.cpp  StandardShadingWithAOSpecRimGlossHalfLambert.fragmentshader  StandardShadingWithAOSpecRimGlossHalfLambert.vertexshader
Lab7/: Lab7.cpp  StandardShading.fragmentshader  StandardShading.vertexshader  StandardShadingWithReflect.fragmentshader  StandardShadingWithRefract.fragmentshader  StandardShadingWithRefract.vertexshader
Lab8/: Lab1FragmentShader.fragmentshader  Lab8.cpp  imgui.ini
common/: GLError.h  controls.cpp  controls.hpp  model.cpp  model.h  shader.h
